--- a/Learning_Grids/css/custom.css
+++ b/Learning_Grids/css/custom.css
@@ -1,5 +1,5 @@
 body {
-  max-width: 80%;
+  max-width: 86%;
   margin: auto;
   background-image: url("/img/wavy-dots.png");
   background-repeat: repeat;
@@ -16,7 +16,40 @@ body {
     'section section section section section section'
     'left left middle middle right right'
     'footer footer footer footer footer footer';
+}
+.section,
+.left,
+.middle,
+.right {
+  background:url("/img/light-veneer.png");
+}
 
+.header,
+.navbar,
+.footer {
+  background:
+    -webkit-radial-gradient(black 3px, transparent 4px),
+    -webkit-radial-gradient(black 3px, transparent 4px),
+    -webkit-linear-gradient(#fff 4px, transparent 0),
+    -webkit-linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
+    -webkit-linear-gradient(135deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
+    #fff;
+  background:
+    -o-radial-gradient(black 3px, transparent 4px),
+    -o-radial-gradient(black 3px, transparent 4px),
+    -o-linear-gradient(#fff 4px, transparent 0),
+    -o-linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
+    -o-linear-gradient(135deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
+    #fff;
+  background:
+    radial-gradient(black 3px, transparent 4px),
+    radial-gradient(black 3px, transparent 4px),
+    linear-gradient(#fff 4px, transparent 0),
+    linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
+    linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
+    #fff;
+  background-size: 109px 109px, 109px 109px, 100% 6px, 109px 109px, 109px 109px;
+  background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
 
 }
 
@@ -36,37 +69,12 @@ body {
   font-family: 'Great Vibes', cursive;
   -webkit-font-kerning: auto;
   font-kerning: auto;
-  background:
-    -webkit-radial-gradient(black 3px, transparent 4px),
-    -webkit-radial-gradient(black 3px, transparent 4px),
-    -webkit-linear-gradient(#fff 4px, transparent 0),
-    -webkit-linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    -webkit-linear-gradient(135deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background:
-    -o-radial-gradient(black 3px, transparent 4px),
-    -o-radial-gradient(black 3px, transparent 4px),
-    -o-linear-gradient(#fff 4px, transparent 0),
-    -o-linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    -o-linear-gradient(135deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background:
-    radial-gradient(black 3px, transparent 4px),
-    radial-gradient(black 3px, transparent 4px),
-    linear-gradient(#fff 4px, transparent 0),
-    linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background-size: 109px 109px, 109px 109px, 100% 6px, 109px 109px, 109px 109px;
-  background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
-
 }
 
 .navbar {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   -ms-grid-column-span: 11;
-
   grid-area: navbar;
   border: 0.26em double gold;
   -webkit-box-shadow: -0.3px 0.3em 0.3em pink;
@@ -77,30 +85,6 @@ body {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
-  background:
-    -webkit-radial-gradient(black 3px, transparent 4px),
-    -webkit-radial-gradient(black 3px, transparent 4px),
-    -webkit-linear-gradient(#fff 4px, transparent 0),
-    -webkit-linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    -webkit-linear-gradient(135deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background:
-    -o-radial-gradient(black 3px, transparent 4px),
-    -o-radial-gradient(black 3px, transparent 4px),
-    -o-linear-gradient(#fff 4px, transparent 0),
-    -o-linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    -o-linear-gradient(135deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background:
-    radial-gradient(black 3px, transparent 4px),
-    radial-gradient(black 3px, transparent 4px),
-    linear-gradient(#fff 4px, transparent 0),
-    linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background-size: 109px 109px, 109px 109px, 100% 6px, 109px 109px, 109px 109px;
-  background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
-
 }
 
 #main_nav {
@@ -129,40 +113,16 @@ body {
 }
 
 
+.middle,
 .section,
 .left,
-.middle,
 .right {
-  border: 0.3em double gold;
+  border: 0.26em double gold;
   -webkit-box-shadow: -0.27px 0.3em 0.3em pink;
   box-shadow: -0.27px 0.3em 0.3em pink;
   border-radius: 1em;
   overflow: hidden;
-  padding: 1.1em;
-  background:
-    -webkit-radial-gradient(black 3px, transparent 4px),
-    -webkit-radial-gradient(black 3px, transparent 4px),
-    -webkit-linear-gradient(#fff 4px, transparent 0),
-    -webkit-linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    -webkit-linear-gradient(135deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background:
-    -o-radial-gradient(black 3px, transparent 4px),
-    -o-radial-gradient(black 3px, transparent 4px),
-    -o-linear-gradient(#fff 4px, transparent 0),
-    -o-linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    -o-linear-gradient(135deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background:
-    radial-gradient(black 3px, transparent 4px),
-    radial-gradient(black 3px, transparent 4px),
-    linear-gradient(#fff 4px, transparent 0),
-    linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background-size: 109px 109px, 109px 109px, 100% 6px, 109px 109px, 109px 109px;
-  background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
-
+  padding: 1em;
 
 }
 
@@ -172,8 +132,6 @@ body {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: left;
-
-
 }
 
 .left-1 {}
@@ -223,7 +181,6 @@ body {
   justify-content: space-around;
   background-color: white;
 
-
 }
 
 .column {
@@ -231,7 +188,7 @@ body {
   text-align: justify;
   font-family: "Gruppo", cursive;
   font-size: 1.2em;
-  border: 0.2em double gold;
+  border: 0.01em solid gold;
 }
 
 .column::before,
@@ -253,38 +210,15 @@ body {
   overflow: hidden;
   margin: 0.0em 0.0em 3em;
   padding: 5em;
-  background:
-    -webkit-radial-gradient(black 3px, transparent 4px),
-    -webkit-radial-gradient(black 3px, transparent 4px),
-    -webkit-linear-gradient(#fff 4px, transparent 0),
-    -webkit-linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    -webkit-linear-gradient(135deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background:
-    -o-radial-gradient(black 3px, transparent 4px),
-    -o-radial-gradient(black 3px, transparent 4px),
-    -o-linear-gradient(#fff 4px, transparent 0),
-    -o-linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    -o-linear-gradient(135deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background:
-    radial-gradient(black 3px, transparent 4px),
-    radial-gradient(black 3px, transparent 4px),
-    linear-gradient(#fff 4px, transparent 0),
-    linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
-    linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
-    #fff;
-  background-size: 109px 109px, 109px 109px, 100% 6px, 109px 109px, 109px 109px;
-  background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
 }
 
 img {
-  border: 0.2em double gold;
+  border: 0.01em solid gold;
   width: 100%;
   height: 100%;
   border-radius: 0.0em 2em;
-  -webkit-box-shadow: 0.5em 0.5em 0.5em pink;
-  box-shadow: 0.5em 0.5em 0.5em pink;
+  -webkit-box-shadow: -0.27px 0.3em 0.3em gold;
+  box-shadow: -0.27px 0.3em 0.3em pink;
 }
 
 @media screen and (max-width: 1350px) {
@@ -292,7 +226,6 @@ img {
   #main_nav a {
     display: block;
     text-align: center;
-
   }
 
   #main_nav {
@@ -300,12 +233,16 @@ img {
     width: 100%;
     margin: auto;
     padding: auto;
-
   }
 
   .navbar {
     position: static;
+    background:url("/img/light-veneer.png");
   }
+  /*.section, .left, .right, .middle{
+   background:  none;
+  }*/
+
 }
 
 @media screen and (max-width: 800px) {
